k8s/coma/apps/freshrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: freshrss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "freshrss.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: freshrss
                port:
                  number: 80
  tls:
    - hosts:
        - "freshrss.artichoke.cc"
      secretName: tls-secret
